welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: '(' expected but '{' found.
  else if {
          ^SlugTracking:16: error: illegal start of simple expression
    }
    ^